add: add spotify logic
